Time limit for project finished

--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <title>Chocolate Pizza </title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
     <header>
-        <h1>Delicious</h1>
-        <img src="img/logo.png" alt="Logo">
-        <h2>THE BEST FOOD BLOG ON THE WEB</h2>
-        <ul>
+        <img id="toplogo" src="img/logo.png" alt="Logo">
+        <div>
+            <h1>Delicious</h1>
+            <h2>THE BEST FOOD BLOG ON THE WEB</h2>
+        </div>
+        <ul id="socialicons">
             <li><img src="img/fb-icon.png" alt="facebook logo"></li>
             <li><img src="img/twit-icon.png" alt="twitter logo"></li>
             <li><img src="img/gp-icon.png" alt="google plus logo"></li>
             <li><img src="img/insta-icon.png" alt="instagram logo"></li>
             <li><img src="img/flic-icon.png" alt="flickr logo"></li>
-            <li><img src="img/pint-icon.png" alt="pintrest logo"></li>
+            <li id="pinterestlogo"><img src="img/pint-icon.png" alt="pintrest logo"></li>
             <li><img src="img/rss-icon.png" alt="rss feed logo"></li>
             <li><img src="img/mail-icon.png" alt="E-mail logo"></li>
         </ul>
-        <img src="img/hr-img.png" alt="header spacer">
+        <div id="border">
+            <img></img>
+        </div>
     </header>
     <main>
         <h3>Chocolate Pizza</h3>
@@ -47,7 +52,7 @@
                 process for+/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or
                 glass tupperware. Freeze for at least two hours before serving.</P>
         </section>
-        <img src="img/list-bg.png" alt="list background logo">
+        <div id="recipe">
         <ul>
             <li>1 1/2 cups milk</li>
             <li>1/2 cup mascarpone</li>
@@ -63,6 +68,7 @@
             <li>1 lemon, juice</li>
             <li>2 tbsp butter</li>
             <li>1 cup honey roasted peacans, roughly chopped</li>
+        </div>
         </ul>
         <img src="img/hr-img.png" alt="header spacer">
         <img src="img/van-pic.png" alt="vannessa picture">
@@ -72,10 +78,12 @@
         <button>SHARE RECIPE</button>
     </main>
     <footer>
-    <img src="img/logo.png" alt="footer image">
-    <p>Delicious &copy; 2013 &middot; All Rights Reserved</p>
-    <p>Proudly published with Ghost.</p>
-    
+        <div id="border">
+            <img></img>
+        </div>
+        <p>Delicious &copy; 2013 &middot; All Rights Reserved</p>
+        <p>Proudly published with Ghost.</p>
+
     </footer>
 
 
